cleared outputs in notebook

--- a/levenshtein.ipynb
+++ b/levenshtein.ipynb
@@ -2,65 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting Spark application\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>3</td><td>None</td><td>pyspark</td><td>idle</td><td></td><td></td><td>✔</td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SparkSession available as 'spark'.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "from awsglue.utils import getResolvedOptions\n",
@@ -90,76 +34,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+------+----+---------------+-----------+--------+------+------+\n",
-      "|emp_id|name|superior_emp_id|year_joined|postcode|gender|salary|\n",
-      "+------+----+---------------+-----------+--------+------+------+\n",
-      "+------+----+---------------+-----------+--------+------+------+"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# pure testing\n",
-    "emp = [(1,\"Smith\",-1,\"2018\",\" \",\"M\",3000), \\\n",
-    "    (2,\"Rose\",1,\"2010\",\"20\",\" \",4000), \\\n",
-    "    (3,\"Williams\",1,\"2010\",\" \",\"M\",1000), \\\n",
-    "    (4,\"Jones\",2,\"2005\",\" \",\"F\",2000), \\\n",
-    "    (5,\"Brown\",2,\"2010\",\"\",\"\",-1), \\\n",
-    "      (6,\"Brown\",2,\"2010\",\" \",\"\",-1) \\\n",
-    "  ]\n",
-    "empColumns = [\"emp_id\",\"name\",\"superior_emp_id\",\"year_joined\", \\\n",
-    "       \"postcode\",\"gender\",\"salary\"]\n",
+    "# # pure testing\n",
+    "# emp = [(1,\"Smith\",-1,\"2018\",\" \",\"M\",3000), \\\n",
+    "#     (2,\"Rose\",1,\"2010\",\"20\",\" \",4000), \\\n",
+    "#     (3,\"Williams\",1,\"2010\",\" \",\"M\",1000), \\\n",
+    "#     (4,\"Jones\",2,\"2005\",\" \",\"F\",2000), \\\n",
+    "#     (5,\"Brown\",2,\"2010\",\"\",\"\",-1), \\\n",
+    "#       (6,\"Brown\",2,\"2010\",\" \",\"\",-1) \\\n",
+    "#   ]\n",
+    "# empColumns = [\"emp_id\",\"name\",\"superior_emp_id\",\"year_joined\", \\\n",
+    "#        \"postcode\",\"gender\",\"salary\"]\n",
     "\n",
-    "empDF = spark.createDataFrame(data=emp, schema = empColumns)\n",
+    "# empDF = spark.createDataFrame(data=emp, schema = empColumns)\n",
     "\n",
     "\n",
     "\n",
-    "empDF = empDF.withColumn(\"postcode\", F.regexp_replace(F.col(\"postcode\"), \"\\A +\\z\", ''))\n",
+    "# empDF = empDF.withColumn(\"postcode\", F.regexp_replace(F.col(\"postcode\"), \"\\A +\\z\", ''))\n",
     "\n",
-    "empDF.filter(\"postcode = ' '\").show()\n",
+    "# empDF.filter(\"postcode = ' '\").show()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create a classification function\n",
     "\n",
@@ -178,42 +82,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "An error was encountered:\n",
-      "\"cannot resolve '`import_year`' given input columns: [];;\\n'Aggregate [max('import_year) AS max(import_year)#2]\\n+- LogicalRDD false\\n\"\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<stdin>\", line 20, in get_latest_partitions\n",
-      "  File \"/home/spark-2.4.3-bin-spark-2.4.3-bin-hadoop2.8/python/lib/pyspark.zip/pyspark/sql/dataframe.py\", line 1320, in select\n",
-      "    jdf = self._jdf.select(self._jcols(*cols))\n",
-      "  File \"/home/spark-2.4.3-bin-spark-2.4.3-bin-hadoop2.8/python/lib/py4j-0.10.7-src.zip/py4j/java_gateway.py\", line 1257, in __call__\n",
-      "    answer, self.gateway_client, self.target_id, self.name)\n",
-      "  File \"/home/spark-2.4.3-bin-spark-2.4.3-bin-hadoop2.8/python/lib/pyspark.zip/pyspark/sql/utils.py\", line 69, in deco\n",
-      "    raise AnalysisException(s.split(': ', 1)[1], stackTrace)\n",
-      "pyspark.sql.utils.AnalysisException: \"cannot resolve '`import_year`' given input columns: [];;\\n'Aggregate [max('import_year) AS max(import_year)#2]\\n+- LogicalRDD false\\n\"\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# addresses_api_data_database = get_glue_env_var('addresses_api_data_database', '')\n",
     "addresses_api_data_database = 'dataplatform-stg-raw-zone-unrestricted-address-api'\n",
@@ -375,8 +246,8 @@
     "# cross_with_same_postcode = query_concat.join(target_concat, query_concat.query_postcode == target_concat.target_postcode, \"fullouter\")\n",
     "\n",
     "# query_concat_with_postcode = query_concat.filter(\"query_postcode != ' '\");\n",
-    "query_concat_with_postcode = query_concat.withColumn(\"query_postcode\", F.regexp_replace(F.col(\"query_postcode\"), \"\\A +\\z\", ''))\n",
-    "query_concat_with_postcode.query_concat.filter(\"query_postcode != ' '\").show()"
+    "query_concat = query_concat.withColumn(\"query_postcode\", F.regexp_replace(F.col(\"query_postcode\"), \"\\A +\\z\", ''))\n",
+    "query_concat_with_postcode.query_concat.filter(\"query_postcode != ''\").show()"
    ]
   },
   {
@@ -388,9 +259,9 @@
     "### COMPARE QUERY AND TARGET TEST\n",
     "\n",
     "\n",
-    "\n",
+    "target_concat_with_same_postcode = target_concat.join(query_concat_with_postcode, target_concat.target_postcode == query_concat_with_postcode.query_postcode, \"leftsemi\")\n",
     "# target_concat_with_postcode = target_concat.filter(\"target_postcode IS NOT NULL\");\n",
-    "cross_with_same_postcode = query_concat.join(target_concat, query_concat.query_postcode == target_concat.target_postcode, \"fullouter\")\n",
+    "cross_with_same_postcode = query_concat_with_postcode.join(target_concat_with_same_postcode, \"fullouter\")\n",
     "\n",
     "\n",
     "cross_compare = cross_with_same_postcode.withColumn(\"levenshtein\", F.levenshtein(F.col(\"query_address\"), F.col(\"target_address\")))\n",
