Python notebook to test the library

--- a/coordinates.ipynb
+++ b/coordinates.ipynb
@@ -2,19 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting convertbng\n",
-      "  Downloading convertbng-0.6.25-cp36-cp36m-manylinux1_x86_64.whl (14.0 MB)\n",
-      "\u001b[K     |████████████████████████████████| 14.0 MB 2.8 MB/s eta 0:00:01     |████████████████████████████▋   | 12.6 MB 2.8 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: numpy>=1.11.0 in /usr/local/lib/python3.6/site-packages (from convertbng) (1.15.0)\n",
-      "Installing collected packages: convertbng\n",
-      "Successfully installed convertbng-0.6.25\n",
+      "Requirement already satisfied: convertbng in /usr/local/lib/python3.6/site-packages (0.6.25)\n",
+      "Requirement already satisfied: numpy>=1.11.0 in /usr/local/lib/python3.6/site-packages (from convertbng) (1.15.0)\n",
       "\u001b[33mWARNING: You are using pip version 20.1.1; however, version 21.3.1 is available.\n",
       "You should consider upgrading via the '/usr/local/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
      ]
@@ -28,27 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([535102.8], [184762.581])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "lon=-0.053026\n",
-    "lat=51.545594\n",
+    "# lon=-0.053026\n",
+    "# lat=51.545594\n",
     "\n",
-    "# convert a single value\n",
-    "res = convert_bng(lon, lat)\n",
-    "res\n"
+    "# # convert a single value\n",
+    "# res = convert_bng(lon, lat)\n",
+    "# res\n"
    ]
   },
   {
@@ -56,42 +41,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# convert lists of longitude and latitude values to OSGB36 Eastings and Northings, using OSTN15 corrections\n",
-    "lons = [lon1, lon2, lon3]\n",
-    "lats = [lat1, lat2, lat3]\n",
-    "res_list = convert_bng(lons, lats)\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([-0.053026, -0.053026, -0.053026], [51.545594, 51.545594, 51.545594])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# convert lists of BNG Eastings and Northings to longitude, latitude\n",
-    "eastings = [535102.8, 535102.8, 535102.8]\n",
-    "northings = [184762.581, 184762.581, 184762.581]\n",
-    "res_list_en = convert_lonlat(eastings, northings)\n",
+    "# # convert lists of BNG Eastings and Northings to longitude, latitude\n",
+    "# eastings = [535102.8, 565934, 598735]\n",
+    "# northings = [184762.581, 197347, 174420]\n",
+    "# res_list_en = convert_lonlat(eastings, northings)\n",
     "\n",
-    "res_list_en"
+    "# res_list_en"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -117,52 +85,44 @@
        "      <th></th>\n",
        "      <th>easting</th>\n",
        "      <th>northing</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>latitude</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>535102.8</td>\n",
-       "      <td>184762</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>534826.525</td>\n",
+       "      <td>185447.978</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>535102.8</td>\n",
-       "      <td>184762</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>509465.800</td>\n",
+       "      <td>184762.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>535102.8</td>\n",
-       "      <td>184762</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>51549.000</td>\n",
+       "      <td>184762.000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    easting  northing  longitude  latitude\n",
-       "0  535102.8    184762          0         0\n",
-       "1  535102.8    184762          0         0\n",
-       "2  535102.8    184762          0         0"
+       "      easting    northing\n",
+       "0  534826.525  185447.978\n",
+       "1  509465.800  184762.000\n",
+       "2   51549.000  184762.000"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "data = [[535102.8,184762,0,0],[535102.8,184762,0,0],[535102.8,184762,0,0]]\n",
-    "dataframe = pd.DataFrame(data, columns = ['easting', 'northing','longitude','latitude'])\n",
+    "data = [[534826.525, 185447.978],[509465.8,184762],[51549,184762]]\n",
+    "dataframe = pd.DataFrame(data, columns = ['easting', 'northing'])\n",
     "dataframe"
    ]
   },
@@ -171,12 +131,104 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>easting</th>\n",
+       "      <th>northing</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>lat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>534826.525</td>\n",
+       "      <td>185447.978</td>\n",
+       "      <td>-0.056746</td>\n",
+       "      <td>51.551819</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>509465.800</td>\n",
+       "      <td>184762.000</td>\n",
+       "      <td>-0.422580</td>\n",
+       "      <td>51.551139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>51549.000</td>\n",
+       "      <td>184762.000</td>\n",
+       "      <td>-7.017711</td>\n",
+       "      <td>51.454293</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      easting    northing       lon        lat\n",
+       "0  534826.525  185447.978 -0.056746  51.551819\n",
+       "1  509465.800  184762.000 -0.422580  51.551139\n",
+       "2   51549.000  184762.000 -7.017711  51.454293"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# assumes numpy imported as np\n",
-    "lons_np = np.array(lons)\n",
-    "lats_np = np.array(lats)\n",
-    "    res_list_np = convert_bng(lons_np, lats_np)"
+    "[dataframe['lon'],dataframe['lat']] = convert_lonlat(dataframe.easting, dataframe.northing)\n",
+    "\n",
+    "dataframe"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
