--- a/coordinates.ipynb
+++ b/coordinates.ipynb
@@ -2,38 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: convertbng in /usr/local/lib/python3.6/site-packages (0.6.25)\n",
-      "Requirement already satisfied: numpy>=1.11.0 in /usr/local/lib/python3.6/site-packages (from convertbng) (1.15.0)\n",
-      "\u001b[33mWARNING: You are using pip version 20.1.1; however, version 21.3.1 is available.\n",
-      "You should consider upgrading via the '/usr/local/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install convertbng\n",
     "\n",
-    "from convertbng.util import convert_bng, convert_lonlat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# lon=-0.053026\n",
-    "# lat=51.545594\n",
-    "\n",
-    "# # convert a single value\n",
-    "# res = convert_bng(lon, lat)\n",
-    "# res\n"
+    "from convertbng.util import convert_bng, convert_lonlat\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -41,187 +17,43 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# # convert lists of BNG Eastings and Northings to longitude, latitude\n",
-    "# eastings = [535102.8, 565934, 598735]\n",
-    "# northings = [184762.581, 197347, 174420]\n",
-    "# res_list_en = convert_lonlat(eastings, northings)\n",
+    "lon=-0.053026\n",
+    "lat=51.545594\n",
     "\n",
-    "# res_list_en"
+    "# convert a single value\n",
+    "res = convert_bng(lon, lat)\n",
+    "res\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>easting</th>\n",
-       "      <th>northing</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>534826.525</td>\n",
-       "      <td>185447.978</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>509465.800</td>\n",
-       "      <td>184762.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>51549.000</td>\n",
-       "      <td>184762.000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      easting    northing\n",
-       "0  534826.525  185447.978\n",
-       "1  509465.800  184762.000\n",
-       "2   51549.000  184762.000"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "# convert lists of BNG Eastings and Northings to longitude, latitude\n",
+    "eastings = [535102.8, 565934, 598735]\n",
+    "northings = [184762.581, 197347, 174420]\n",
+    "res_list_en = convert_lonlat(eastings, northings)\n",
+    "\n",
+    "res_list_en"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add lat and lon columns to a dataframe that contains Eastings and Northings, and populate them\n",
     "data = [[534826.525, 185447.978],[509465.8,184762],[51549,184762]]\n",
     "dataframe = pd.DataFrame(data, columns = ['easting', 'northing'])\n",
-    "dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>easting</th>\n",
-       "      <th>northing</th>\n",
-       "      <th>lon</th>\n",
-       "      <th>lat</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>534826.525</td>\n",
-       "      <td>185447.978</td>\n",
-       "      <td>-0.056746</td>\n",
-       "      <td>51.551819</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>509465.800</td>\n",
-       "      <td>184762.000</td>\n",
-       "      <td>-0.422580</td>\n",
-       "      <td>51.551139</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>51549.000</td>\n",
-       "      <td>184762.000</td>\n",
-       "      <td>-7.017711</td>\n",
-       "      <td>51.454293</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      easting    northing       lon        lat\n",
-       "0  534826.525  185447.978 -0.056746  51.551819\n",
-       "1  509465.800  184762.000 -0.422580  51.551139\n",
-       "2   51549.000  184762.000 -7.017711  51.454293"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[dataframe['lon'],dataframe['lat']] = convert_lonlat(dataframe.easting, dataframe.northing)\n",
+    "dataframe\n",
     "\n",
+    "[dataframe['lon'],dataframe['lat']] = convert_lonlat(dataframe.easting, dataframe.northing)\n",
     "dataframe"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
