Add make target to start up the v3 aws glue libs docker image
Improve the test s3 notbook

--- a/test-s3-connection.ipynb
+++ b/test-s3-connection.ipynb
@@ -8,14 +8,45 @@
    "source": [
     "from pyspark import SparkContext\n",
     "from awsglue.context import GlueContext\n",
-    "s3_url=\"s3://dataplatform-emmacorbett-landing-zone/parking/manual/cedar-parking-expenditure/Parking Expenditure-Table 1.csv\"\n",
+    "import  boto3\n",
+    "\n",
+    "s3Client = boto3.client('s3')\n",
+    "s3Bucket=\"dataplatform-stg-landing-zone\"\n",
+    "prefix = \"parking/manual\"\n",
+    "\n",
+    "objects = s3Client.list_objects_v2(\n",
+    "    Bucket=s3Bucket,\n",
+    "    Prefix=prefix\n",
+    ")['Contents']\n",
+    "\n",
+    "nonEmptyObjects = list(filter(lambda x: x['Size'] != 0, objects))\n",
+    "nonEmptyObjects[0:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exampleObject = nonEmptyObjects[0]['Key']\n",
+    "exampleObject"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "glueContext = GlueContext(SparkContext.getOrCreate()) \n",
     "inputDF = glueContext.create_dynamic_frame_from_options(\n",
     "    connection_type = \"s3\",\n",
-    "    connection_options = {\"paths\": [s3_url]}, format = \"csv\", format_options = { \"withHeader\": True })\n",
+    "    connection_options = {\"paths\": [f\"s3://{s3Bucket}/{exampleObject}\"]}, format = \"csv\", format_options = { \"withHeader\": True })\n",
     "\n",
-    "inputDF.toDF().show()"
+    "inputDF.toDF().show(10)"
    ]
   },
   {
@@ -26,19 +57,12 @@
    "source": [
     "inputDF.toDF().columns"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PySpark",
-   "language": "",
+   "display_name": "Glue Spark - Local (PySpark)",
+   "language": "python",
    "name": "pysparkkernel"
   },
   "language_info": {
@@ -46,6 +70,7 @@
     "name": "python",
     "version": 3
    },
+   "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "pyspark",
    "pygments_lexer": "python3"
