Correct template bits that caused confusion during training

--- a/template.ipynb
+++ b/template.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "source_catalog_table = get_glue_env_var('source_catalog_table', '')\n",
     "source_catalog_database = get_glue_env_var('source_catalog_database', '')\n",
-    "target_bucket = get_glue_env_var('s3_bucket_target', '')"
+    "s3_bucket_target = get_glue_env_var('s3_bucket_target', '')"
    ]
   },
   {
@@ -84,22 +84,22 @@
    "outputs": [],
    "source": [
     "# Convert data frame to dynamic frame \n",
-    "dyanmic_frame = DynamicFrame.fromDF(df, glueContext, \"target_data_to_write\")\n",
+    "dynamic_frame = DynamicFrame.fromDF(df, glueContext, \"target_data_to_write\")\n",
     "\n",
     "# Write the data to S3\n",
     "parquet_data = glueContext.write_dynamic_frame.from_options(\n",
-    "    frame=dyanmic_frame,\n",
+    "    frame=dynamic_frame,\n",
     "    connection_type=\"s3\",\n",
     "    format=\"parquet\",\n",
-    "    connection_options={\"path\": target_bucket, \"partitionKeys\": [\"import_year\", \"import_month\", \"import_day\", \"import_date\"]},\n",
+    "    connection_options={\"path\": s3_bucket_target, \"partitionKeys\": [\"import_year\", \"import_month\", \"import_day\", \"import_date\"]},\n",
     "    transformation_ctx=\"target_data_to_write\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Glue Spark - Local (PySpark)",
-   "language": "python",
+   "display_name": "PySpark",
+   "language": "",
    "name": "pysparkkernel"
   },
   "language_info": {
@@ -107,7 +107,6 @@
     "name": "python",
     "version": 3
    },
-   "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "pyspark",
    "pygments_lexer": "python3"
