--- a/test-s3-connection.ipynb
+++ b/test-s3-connection.ipynb
@@ -2,14 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "357249a5",
+   "execution_count": 1,
+   "id": "a6dca92a",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Spark application\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>User</th><th>Current session?</th></tr><tr><td>0</td><td>application_1649083902137_0001</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://ip-172-31-12-71.eu-west-2.compute.internal:20888/proxy/application_1649083902137_0001/\">Link</a></td><td><a target=\"_blank\" href=\"http://ip-172-31-8-81.eu-west-2.compute.internal:8042/node/containerlogs/container_1649083902137_0001_01_000001/livy\">Link</a></td><td>None</td><td>✔</td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "0724b4652b5248eeb1c9434960466af8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -24,7 +44,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{u'LastModified': datetime.datetime(2022, 2, 7, 15, 59, 34, tzinfo=tzlocal()), u'ETag': '\"d30ac02aafddfb04743f645c362bbb1c\"', u'StorageClass': 'STANDARD', u'Key': 'parking/manual/test-csv/output-onlinerandomtools.csv', u'Size': 378}]"
+      "SparkSession available as 'spark'.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9ffd2d749e234891acacaf0f13564cc2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]"
      ]
     }
    ],
@@ -48,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2f23c831",
+   "id": "bd6a5122",
    "metadata": {},
    "outputs": [
     {
@@ -81,14 +122,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "5ecca76d",
+   "execution_count": 1,
+   "id": "4a38e22b",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Spark application\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>User</th><th>Current session?</th></tr><tr><td>1</td><td>application_1649083902137_0002</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://ip-172-31-12-71.eu-west-2.compute.internal:20888/proxy/application_1649083902137_0002/\">Link</a></td><td><a target=\"_blank\" href=\"http://ip-172-31-7-216.eu-west-2.compute.internal:8042/node/containerlogs/container_1649083902137_0002_01_000001/livy\">Link</a></td><td>None</td><td>✔</td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "81856901f19749949593c1483684b90c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparkSession available as 'spark'.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "622f8f1c8d1e4f2abc50abc9ebcb7ca5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,11 +186,9 @@
      "output_type": "stream",
      "text": [
       "An error was encountered:\n",
-      "invalid syntax (<stdin>, line 5)\n",
-      "  File \"<stdin>\", line 5\n",
-      "    connection_options = {\"paths\": [f\"s3://{s3Bucket}/{exampleObject}\"]},\n",
-      "                                                                     ^\n",
-      "SyntaxError: invalid syntax\n",
+      "name 'nonEmptyObjects' is not defined\n",
+      "Traceback (most recent call last):\n",
+      "NameError: name 'nonEmptyObjects' is not defined\n",
       "\n"
      ]
     }
@@ -130,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e34769d",
+   "id": "86902c5e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -138,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eee0683b",
+   "id": "3bec7b75",
    "metadata": {},
    "outputs": [],
    "source": []
