--- a/using-spark-sql-with-python.ipynb
+++ b/using-spark-sql-with-python.ipynb
@@ -3,44 +3,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e71fad21",
+   "id": "ebd43833",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "print(sys.version)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0dbd9240",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install sparksql-magic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ecd7106b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext sparksql_magic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20c71621",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%sparksql\n",
+    "from pyspark.context import SparkContext\n",
+    "from awsglue.context import GlueContext\n",
     "\n",
-    "# Spark SQL here"
+    "glue_context = GlueContext(spark)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf56b75c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "database=\"dataplatform-emmacorbett-landing-zone-database\"\n",
+    "table_name=\"mtfh_tenureinformation\"\n",
+    "df = glue_context.create_data_frame.from_catalog( \n",
+    "    database = database, \n",
+    "    table_name = table_name, \n",
+    "    transformation_ctx = f\"{table_name}_source2\")\n",
+    "df.createOrReplaceTempView(\"tenures\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ba30090",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql -o tenures -q\n",
+    "SELECT * FROM tenures limit 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "107f851b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%local\n",
+    "tenures.head()"
    ]
   }
  ],
