Updates to various scripts

--- a/templates/using-pyspark.ipynb
+++ b/templates/using-pyspark.ipynb
@@ -36,13 +36,7 @@
     "from awsglue.utils import getResolvedOptions\n",
     "from pyspark.sql.functions import rank, col, trim, when, max\n",
     "import pyspark.sql.functions as F\n",
-    "# from helper.helpers import get_glue_env_var,\n",
-    "\n",
-    "def get_glue_env_var(key, default=\"none\"):\n",
-    "    if f'--{key}' in sys.argv:\n",
-    "        return getResolvedOptions(sys.argv, [key])[key]\n",
-    "    else:\n",
-    "        return default\n",
+    "from helper.helpers import get_glue_env_var, PARTITION_KEYS\n",
     "\n",
     "glueContext = GlueContext(SparkContext.getOrCreate())\n",
     "job = Job(glueContext)\n",
@@ -61,7 +55,8 @@
     "# Load data from glue catalog\n",
     "data_source = glueContext.create_dynamic_frame.from_catalog(\n",
     "    name_space=source_catalog_database,\n",
-    "    table_name=source_catalog_table\n",
+    "    table_name=source_catalog_table,\n",
+    "    transformation_ctx = f\"{source_catalog_table}_source\"\n",
     ")\n",
     "\n",
     "# convert to a data frame\n",
@@ -91,15 +86,15 @@
     "    frame=dynamic_frame,\n",
     "    connection_type=\"s3\",\n",
     "    format=\"parquet\",\n",
-    "    connection_options={\"path\": s3_bucket_target, \"partitionKeys\": [\"import_year\", \"import_month\", \"import_day\", \"import_date\"]},\n",
+    "    connection_options={\"path\": s3_bucket_target, \"partitionKeys\": PARTITION_KEYS},\n",
     "    transformation_ctx=\"target_data_to_write\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PySpark",
-   "language": "",
+   "display_name": "Sparkmagic (PySpark)",
+   "language": "python",
    "name": "pysparkkernel"
   },
   "language_info": {
@@ -107,6 +102,7 @@
     "name": "python",
     "version": 3
    },
+   "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "pyspark",
    "pygments_lexer": "python3"
