--- a/templates/using-spark-sql-with-magic.ipynb
+++ b/templates/using-spark-sql-with-magic.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f347cf4",
+   "id": "c396a0ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,33 +16,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b03cc18d",
+   "id": "b98116a0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "database=\"dataplatform-emmacorbett-landing-zone-database\"\n",
-    "table_name=\"mtfh_tenureinformation\"\n",
+    "database=\"dataplatform-stg-raw-zone-database\"\n",
+    "table_name=\"\"\n",
     "df = glue_context.create_data_frame.from_catalog( \n",
     "    database = database, \n",
     "    table_name = table_name, \n",
     "    transformation_ctx = f\"{table_name}_source2\")\n",
-    "df.createOrReplaceTempView(\"tenures\")"
+    "df.createOrReplaceTempView(table_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc16d7bc",
+   "id": "f19c1509",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sqlDF = spark.sql(\"SELECT * FROM tenures limit 10\")"
+    "sqlDF = spark.sql(f'''\n",
+    "SELECT * FROM {table_name}\n",
+    "limit 10\n",
+    "''')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ecf544a",
+   "id": "6f2510ba",
    "metadata": {},
    "outputs": [],
    "source": [
