--- a/templates/using-spark-sql-with-python.ipynb
+++ b/templates/using-spark-sql-with-python.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebd43833",
+   "id": "d9c0da5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,39 +16,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf56b75c",
+   "id": "ee0ac0b5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "database=\"dataplatform-emmacorbett-landing-zone-database\"\n",
-    "table_name=\"mtfh_tenureinformation\"\n",
+    "database=\"dataplatform-stg-raw-zone-database\"\n",
+    "table_name=\"\"\n",
     "df = glue_context.create_data_frame.from_catalog( \n",
     "    database = database, \n",
     "    table_name = table_name, \n",
     "    transformation_ctx = f\"{table_name}_source2\")\n",
-    "df.createOrReplaceTempView(\"tenures\")"
+    "df.createOrReplaceTempView(table_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ba30090",
+   "id": "493219b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%sql -o tenures -q\n",
-    "SELECT * FROM tenures limit 10"
+    "%%sql -o output_results -q\n",
+    "# Change table_name to be the table name\n",
+    "SELECT * FROM table_name limit 10"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "107f851b",
+   "id": "4de6081e",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%local\n",
-    "tenures.head()"
+    "output_results.head()"
    ]
   }
  ],
