--- a/test-s3-connection.ipynb
+++ b/test-s3-connection.ipynb
@@ -2,84 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "a6dca92a",
+   "execution_count": null,
+   "id": "050b9dfe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting Spark application\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>User</th><th>Current session?</th></tr><tr><td>0</td><td>application_1649083902137_0001</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://ip-172-31-12-71.eu-west-2.compute.internal:20888/proxy/application_1649083902137_0001/\">Link</a></td><td><a target=\"_blank\" href=\"http://ip-172-31-8-81.eu-west-2.compute.internal:8042/node/containerlogs/container_1649083902137_0001_01_000001/livy\">Link</a></td><td>None</td><td>✔</td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0724b4652b5248eeb1c9434960466af8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SparkSession available as 'spark'.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ffd2d749e234891acacaf0f13564cc2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyspark import SparkContext\n",
-    "import  boto3\n",
-    "\n",
+    "import  boto3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd9d3e29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "print(sys.version)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4336ce4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "s3Client = boto3.client('s3')\n",
-    "s3Bucket=\"dataplatform-emmacorbett-landing-zone\"\n",
-    "# prefix = \"parking/manual\"\n",
+    "s3Bucket=\"dataplatform-stg-landing-zone\"\n",
+    "prefix = \"parking/manual\"\n",
     "\n",
     "objects = s3Client.list_objects_v2(\n",
-    "    Bucket=s3Bucket\n",
-    "#     Prefix=prefix\n",
+    "    Bucket=s3Bucket,\n",
+    "    Prefix=prefix\n",
     ")['Contents']\n",
     "\n",
     "nonEmptyObjects = list(filter(lambda x: x['Size'] != 0, objects))\n",
@@ -88,111 +44,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "bd6a5122",
+   "execution_count": null,
+   "id": "e1e5b54d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.7.18 (default, Feb 18 2021, 06:10:44) \n",
-      "[GCC 4.8.5 20150623 (Red Hat 4.8.5-28)]"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "print(sys.version)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "4a38e22b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting Spark application\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>User</th><th>Current session?</th></tr><tr><td>1</td><td>application_1649083902137_0002</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://ip-172-31-12-71.eu-west-2.compute.internal:20888/proxy/application_1649083902137_0002/\">Link</a></td><td><a target=\"_blank\" href=\"http://ip-172-31-7-216.eu-west-2.compute.internal:8042/node/containerlogs/container_1649083902137_0002_01_000001/livy\">Link</a></td><td>None</td><td>✔</td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81856901f19749949593c1483684b90c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SparkSession available as 'spark'.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "622f8f1c8d1e4f2abc50abc9ebcb7ca5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "An error was encountered:\n",
-      "name 'nonEmptyObjects' is not defined\n",
-      "Traceback (most recent call last):\n",
-      "NameError: name 'nonEmptyObjects' is not defined\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "exampleObject = nonEmptyObjects[0]\n",
     "glueContext = GlueContext(SparkContext.getOrCreate())\n",
@@ -206,22 +61,6 @@
     "inputDF.toDF().show(10)\n",
     "inputDF.toDF().columns"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "86902c5e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3bec7b75",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
