Use a table from parking raw zone in templates

--- a/templates/using-spark-sql-with-magic.ipynb
+++ b/templates/using-spark-sql-with-magic.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c396a0ff",
+   "id": "5b9dd9af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,28 +16,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b98116a0",
+   "id": "bd90941a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "database=\"dataplatform-stg-raw-zone-database\"\n",
-    "table_name=\"\"\n",
+    "database=\"parking-raw-zone\"\n",
+    "\n",
     "df = glue_context.create_data_frame.from_catalog( \n",
     "    database = database, \n",
-    "    table_name = table_name, \n",
-    "    transformation_ctx = f\"{table_name}_source2\")\n",
-    "df.createOrReplaceTempView(table_name)"
+    "    table_name = \"eta_decision_records\", \n",
+    "    transformation_ctx = \"eta_decision_records_source\")\n",
+    "df.createOrReplaceTempView(\"eta_decision_records\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f19c1509",
+   "id": "48fb3ece",
    "metadata": {},
    "outputs": [],
    "source": [
     "sqlDF = spark.sql(f'''\n",
-    "SELECT * FROM {table_name}\n",
+    "SELECT * FROM eta_decision_records\n",
+    "WHERE decision_i_e_dnc_appeal_allowed_appeal_rejected = 'Appeal Rejected'\n",
     "limit 10\n",
     "''')"
    ]
@@ -45,10 +46,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f2510ba",
+   "id": "fd80c229",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%pretty\n",
     "sqlDF.show()"
    ]
   }
