--- a/templates/using-spark-sql-with-python.ipynb
+++ b/templates/using-spark-sql-with-python.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9c0da5e",
+   "id": "c96599f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,35 +16,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee0ac0b5",
+   "id": "886013ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "database=\"dataplatform-stg-raw-zone-database\"\n",
-    "table_name=\"\"\n",
+    "database=\"parking-raw-zone\"\n",
+    "\n",
     "df = glue_context.create_data_frame.from_catalog( \n",
     "    database = database, \n",
-    "    table_name = table_name, \n",
-    "    transformation_ctx = f\"{table_name}_source2\")\n",
-    "df.createOrReplaceTempView(table_name)"
+    "    table_name = \"eta_decision_records\", \n",
+    "    transformation_ctx = \"eta_decision_records_source\")\n",
+    "df.createOrReplaceTempView(\"eta_decision_records\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "493219b1",
+   "id": "d818b873",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%sql -o output_results -q\n",
-    "# Change table_name to be the table name\n",
-    "SELECT * FROM table_name limit 10"
+    "SELECT * FROM eta_decision_records\n",
+    "WHERE decision_i_e_dnc_appeal_allowed_appeal_rejected = 'Appeal Rejected'\n",
+    "limit 10"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4de6081e",
+   "id": "c2bfba9f",
    "metadata": {},
    "outputs": [],
    "source": [
