--- a/util/copy_tables_to_new_s3_location.ipynb
+++ b/util/copy_tables_to_new_s3_location.ipynb
@@ -33,12 +33,7 @@
     "from awsglue.utils import getResolvedOptions\n",
     "from pyspark.sql.functions import rank, col, trim, when, max\n",
     "import pyspark.sql.functions as F\n",
-    "\n",
-    "def get_glue_env_var(key, default=\"none\"):\n",
-    "    if f'--{key}' in sys.argv:\n",
-    "        return getResolvedOptions(sys.argv, [key])[key]\n",
-    "    else:\n",
-    "        return default\n",
+    "from helpers.helpers import get_glue_env_var\n",
     "    \n",
     "def getLatestPartitions(dfa):\n",
     "   dfa = dfa.where(col('import_year') == dfa.select(max('import_year')).first()[0])\n",
@@ -125,21 +120,19 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Sparkmagic (PySpark)",
    "language": "python",
-   "name": "python3"
+   "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython",
+    "name": "python",
     "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "name": "pyspark",
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
