Add docker setup

--- a/notebooks/test-s3-connection.ipynb
+++ b/notebooks/test-s3-connection.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "from pyspark import SparkContext\n",
+    "from awsglue.context import GlueContext\n",
     "import  boto3"
    ]
   },
@@ -65,7 +66,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Sparkmagic (PySpark)",
+   "display_name": "Glue Spark - Local (PySpark)",
    "language": "python",
    "name": "pysparkkernel"
   },
