Correct misspelling of helpers module

--- a/notebooks/templates/using-pyspark.ipynb
+++ b/notebooks/templates/using-pyspark.ipynb
@@ -36,7 +36,7 @@
     "from awsglue.utils import getResolvedOptions\n",
     "from pyspark.sql.functions import rank, col, trim, when, max\n",
     "import pyspark.sql.functions as F\n",
-    "from helper.helpers import get_glue_env_var, PARTITION_KEYS\n",
+    "from helpers.helpers import get_glue_env_var, PARTITION_KEYS\n",
     "\n",
     "glueContext = GlueContext(SparkContext.getOrCreate())\n",
     "job = Job(glueContext)\n",
